# ml-practice

./: .gitignore  ;  MUJOCO_LOG.TXT  README.md  gmm.py  hello.py  pyproject.toml  setup.py  te -q  vae.py  vi_normal_normal.py  vi_weight_uncertainity.py
mle/: config.py  fns.py  scheduler.py  trainer.py  utils.py
mle/models/: vae.py
mle/rl/: core.py  env.py  environment.py  metrics.py  replay_buffer.py  tabular.py  utils.py
mle/rl/algo/: ddpg.py  gae.py  off_policy.py  policy_gradient.py  ppo.py  sac.py  td3.py  vanilla_policy_gradient.py  vpg.py
mle/rl/algo/mle/rl/algo/: td3.py
mle/rl/models/: policy.py  q_model.py
mle/utils/: model_utils.py  train_utils.py
references/: dqn_cartpole.py  vi_gmm.py  vi_simple_score_fn_estimator.py
scripts/: dqn_cartpole.py  explore_bandit_regret.py  gae_experiment.py  gmm.py  gmm_sol.py  mnist_vae.py  pg_cartpole.py  pg_pendulum.py  run_pg.py  timing.py  train_policy_gradient.py  vae_mnist.py  vi.py  vi_score_fn_estimator_2.py  vi_score_function_estimator_1.py  vi_simple_score_fn_estimator.py  vi_with_score_function_estimator.py
tests/envs/: riverswim.py
tests/mle/: test_environment.py  test_tabular.py
tests/mle/rl/: test_replay_buffer.py
tests/mle/utils/: test_model_utils.py
tests/rl/models/: test_policy.py
